use martini and godeps

--- a/app/templates/index.tmpl
+++ b/app/templates/index.tmpl
@@ -3,7 +3,7 @@
   <head>
     <title>andrewthorp.com - go</title>
     <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Droid+Sans" />
-    <link rel="stylesheet" href="/css/site.css" />
+    <link rel="stylesheet" href="site.css" />
   </head>
 
   <body>
@@ -28,7 +28,7 @@
 
           <footer>
             <p>
-              My PGP key: <a href="/statics/andrewthorp-pgp.asc" class="pgp">FA56FA77</a>
+              My PGP key: <a href="andrewpthorp-pgp.asc" class="pgp">FA56FA77</a>
             </p>
           </footer>
         </div>
