--- a/app/assets/css/site.css
+++ b/app/assets/css/site.css
@@ -4863,34 +4863,36 @@ th.hide-for-touch {
     display: table-cell !important; } }
 
 body {
-  background: #F2EDE4; }
+  background: #FFF; }
 
 hr {
-  border-color: #E2DCCB; }
+  border-color: #DEDEDE; }
 
 h1, h2, h3, h4, h5, h6, p, ul li, ol li {
-  color: #4D4D4D;
+  color: #222;
   font-family: 'Droid Sans', sans-serif; }
   h1#global-header, h2#global-header, h3#global-header, h4#global-header, h5#global-header, h6#global-header, p#global-header, ul li#global-header, ol li#global-header {
     font-size: 1.75em;
     font-size: 1.75rem;
-    margin: 25px 0px 25px; }
+    margin: 45px 0px 25px; }
 
-div#content {
-  border: 1px solid #E2DCCB;
-  border-width: 1px 0px 0px 1px;
-  padding: 15px 0px 15px 25px; }
-  div#content ul {
-    list-style-type: none;
-    margin-left: 0px; }
-  div#content a {
-    background: #E2DCCB;
-    color: #059E9A;
-    padding: 0px 2px; }
-    div#content a:hover {
-      background: #059E9A;
-      color: white; }
-    div#content a.pgp {
-      margin-left: 8px; }
-  div#content footer p {
-    margin-bottom: 0px; }
+div#content ul {
+  list-style-type: none;
+  margin-left: 0px; }
+  div#content ul li {
+    margin-bottom: 3px; }
+div#content a {
+  background: #DEDEDE;
+  border: 3px solid #275062;
+  border-width: 0px 0px 3px;
+  color: #3D7B99;
+  padding: 1px 4px 0px; }
+  div#content a:hover {
+    background: #3D7B99;
+    color: white; }
+  div#content a:active {
+    border-color: #3D7B99; }
+  div#content a.pgp {
+    margin-left: 8px; }
+div#content footer p {
+  margin-bottom: 0px; }
